--- a/home.html
+++ b/home.html
@@ -144,7 +144,7 @@
     <section>
       <div class="section_header text-center mb-5 mt-4"> 
         <h1>COVID Symptoms</h1>
-        <img src="Corona-2.png" >
+        <img src="IMG-20210418-WA0128.jpg" >
       </div>
     </section>
 
@@ -154,13 +154,13 @@
       </div>
       <div class="row">
         <div class="column">
-          <img src="blue-1.png" style="width:100%">
+          <img src="IMG-20210418-WA0127.jpg" style="width:100%">
         </div>
         <div class="column">
-          <img src="blue-2.png" style="width:100%">
+          <img src="IMG-20210418-WA0129.jpg" style="width:100%">
         </div>
         <div class="column">
-          <img src="blue-3.png" style="width:100%">
+          <img src="IMG-20210418-WA0130.jpg" style="width:100%">
         </div>
       </div>
     </section>
