--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
           <a class="nav-link active" href="home.html">Home</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="about.html">About</a>
+          <a class="nav-link" href="home.html#foot">About</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="form.html">Log in</a>
