--- a/blog.html
+++ b/blog.html
@@ -15,7 +15,7 @@
 .container{
     height: 100vh;
     width: 100%;
-    background-image: url("https://www.pexels.com/photo/three-men-standing-near-waterfalls-2387873/");
+    background-image: url(./budhha.jpg);
     /* opacity: 20%; */
     background-position: center;
     background-size: cover;
