--- a/blog.html
+++ b/blog.html
@@ -139,6 +139,7 @@
         width: 50%;
     }
     .content .btn{
+        display:none;
         position: absolute;
         top: 70%;
         outline: none;
